[gd_scene load_steps=4 format=3 uid="uid://j4hf2qioo8lp"]

[ext_resource type="Script" uid="uid://x702vr1icq7t" path="res://src/ui/board.gd" id="1_g3sq5"]
[ext_resource type="Texture2D" uid="uid://cye8e0d4w1fow" path="res://assets/gfx/workspace/Desk_Chalkboard.png" id="1_liw60"]
[ext_resource type="PackedScene" uid="uid://ddtmbsydhepfy" path="res://src/ui/tally_line.tscn" id="2_g3sq5"]

[node name="Board" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g3sq5")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_liw60")

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 37
theme_override_constants/margin_top = 30

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2

[node name="ReturnTally" parent="TextureRect/MarginContainer/VBoxContainer" instance=ExtResource("2_g3sq5")]
layout_mode = 2
title = "Back to Life"
expected = 10

[node name="HeavenTally" parent="TextureRect/MarginContainer/VBoxContainer" instance=ExtResource("2_g3sq5")]
layout_mode = 2
title = "Heaven"
expected = 10

[node name="ReincarnationTally" parent="TextureRect/MarginContainer/VBoxContainer" instance=ExtResource("2_g3sq5")]
layout_mode = 2
title = "Reincarnation"
expected = 10

[node name="PurgatoryTally" parent="TextureRect/MarginContainer/VBoxContainer" instance=ExtResource("2_g3sq5")]
layout_mode = 2
title = "Purgatory"
expected = 10

[node name="HellTally" parent="TextureRect/MarginContainer/VBoxContainer" instance=ExtResource("2_g3sq5")]
layout_mode = 2
title = "Hell"
expected = 10

[node name="TotalTally" parent="TextureRect/MarginContainer/VBoxContainer" instance=ExtResource("2_g3sq5")]
layout_mode = 2
title = "Total"
